[package]
name = "leetcode_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.21.0"
tokio = { version = "1.28.2", features = ["full"] }
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
dotenvy = "0.15.7"
thirtyfour = "0.31.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite" ] }